2004-08-3  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/abstract/FileChooser.chs, gtk/general/FFI.hs: move a couple of
	string marshaling functions to a common location.

2004-08-1  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/SpinButton.chs, gtk/layout/Table.chs, gtk/layout/Layout.chs
	gtk/misc/Viewport.chs, gtk/misc/Tooltips.chs,
	gtk/scrolling/ScrolledWindow.chs, gtk/treeList/ListStore.chs,
	gtk/display/Label.chs, gtk/abstract/Misc.chs, gtk/abstract/Paned.chs,
	gtk/abstract/Range.chs, gtk/abstract/Scale.chs: add missing functions.
	Also fix a couple typo bugs and tidy up some documentation.

	* gtk/layout/api.ignore, gtk/misc/api.ignore, gtk/treeList/api.ignore
	gtk/windows/api.ignore, gtk/abstract/api.ignore: updated with more
	deprecated functions to ignore.

	* tools/apicoverage/gtk.ignore: updated api ignore stuff. Some added,
	some moved elsewhere.

	* tools/apicoverage/Makefile: new target 'summary' to list the number
	of unbound gtk functions, grouped by namespace prefix.

2004-07-30  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/Editable.chs, gtk/entry/Entry.chs: split off editable
	functions into separate module and make Entry an instance of the
	EditableClass. Also add missing functions.

	* gtk/entry/SpinButton.chs: make SpinButton an EditableClass instance.

	* tools/hierarchyGen/hierarchy.list: add GtkEditable as an interface.

	* gtk/general/Gtk.hs: export new Editable module.

	* gtk/buttons/Button.chs, gtk/menuComboToolbar/CheckMenuItem.chs,
	gtk/misc/Calendar.chs, gtk/misc/EventBox.chs, gtk/misc/HandleBox.chs
	gtk/entry/HScale, gtk/entry/VScale, gtk/ornaments/Frame.chs,
	gtk/treeList/CellRendererToggle.chs: add missing functions.

	* gtk/general/Structs.hsc: remove unneeded CheckMenuItem function.

	* gtk/misc/api.ignore, gtk/treeList/api.ignore, gtk/entry/api.ignore
	gtk/abstract/api.ignore, gtk/general/api.ignore, gtk/windows/api.ignore
	gtk/menuComboToolbar/api.ignore, gtk/layout/api.ignore: new files to